css/shanti-main-images.css
/* ... */
.view-section .nav-tabs>li.active>a, 
.view-section .nav-tabs>li.active>a:hover, 
.view-section .nav-tabs>li.active>a:active {
  border-top-color: rgb(196,190,40) !important;
}

.shanti-thumbnail-image.shanti-field-visuals .icon {
  background: rgba(196,190,40,0.8);
}

.navbar-brand:active .site-slogan {
  color: #444 !important;
}

.titlearea{ box-shadow: inset 0 1px 5px 3px rgba(50, 50, 50, 0.100);}
.titlearea > div{ box-shadow: inset 0 -2px 10px -4px rgba(0, 0, 0, 0.000);}

/* Pagerer clear both (should this be in shanti-main.css?) */
table.pagerer { 
  /* clear: both; this is not requied so I'm removing it */
  width:100%; 
  margin-top: -0.7rem;
}

.front .view-media-sharedshelf-my-images table.pagerer:first-of-type{
  margin-top: -2.4rem;
}

.view-media-sharedshelf-my-images table.pagerer:last-child{ 
  margin-bottom: 5rem;
  margin-top: 1.5rem;
}

ul.pager{ margin: 0 0 0.5rem;}

.contextual-links-region > h2{
  white-space:nowrap;
}



.front.logged-in .tab-pane.main-col > div > .block-system,
.front.logged-in .content-section .contextual-links-region h2,
.front.logged-in .content-section .contextual-links-region .content{ 
  max-width: 1050px !important;
  margin: 0 auto !important;
}

.front.logged-in .content-section .contextual-links-region .content{
  padding: 1rem 0 4rem;
}

.front.logged-in .tab-pane.main-col > div,
.front.logged-in .main-col .block-views.contextual-links-region{
  width: 100% !important;
  max-width: 100% !important;
  padding: 1.7rem 0 4rem;
}

.front.logged-in .content-section .contextual-links-region{
  padding-top: 0.1rem;
  margin-top: -1rem;
  position: relative !important;
}




/*------------------------------------------------*/
/***** BEGIN gallery grid, dropdown, lightbox *****/
/*------------------------------------------------*/
.og-grid{
  list-style: none;
  padding:0;
  margin: 0 auto;
  text-align: center;
  width: 100%;
}

.og-grid .item {
  float: left;
  margin:0 5px 10px 0;
  display: inline-block;
  vertical-align: top;
}

.og-grid .item > a,
.og-grid .item > a img {
  border: none;
  outline: none;
  display: block;
  position: relative;
}

.og-grid .item.last-row,
.og-grid .item.first-item{ 
  clear:both;
}

/* remove margin bottom on last row */
.last-row, 
.last-row ~ .item {
  margin-bottom: 0;
}

.og-expander{ 
  position: absolute !important;
  border-bottom:0.75rem double #eee;
  background: #222;
  top: auto;
  left: 0;
  width: 100%;
  margin-top: 10px;
  text-align: left;
  height: 0;
  overflow: hidden;
}

.og-expander-inner {
  background: #222;
  padding: 2.5rem 5.5rem;
  height: 100%;
 -webkit-box-shadow: inset 0 0 100px 40px rgba(0,0,1,0);
  -moz-box-shadow: inset 0 0 100px 40px rgba(0,0,1,0);
  box-shadow: inset 0 0 100px 40px rgba(0,0,0,1.0);
}

.og-close {
  position: absolute;
  width: 3rem;
  height: 3rem;
  top: 1.5rem;
  right: 2rem;
  color:#aaa;
  cursor: pointer;
}

.og-close::before,
.og-close::after {
  content: '';
  position: absolute;
  width: 100%;
  top: 50%;
  height: 1px;
  background: #aaa;
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  transform: rotate(45deg);
}

.og-close::after {
  -webkit-transform: rotate(-45deg);
  -moz-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.og-close:hover::before,
.og-close:hover::after{
  background: #eee;
}

.og-fullimg,
.og-details {
  float: left;
  height: 100%;
  overflow: hidden;
  /*position: relative;*/
}

.og-fullimg {
  padding: 0;
  margin-left:2rem;
  width: 55%;
  text-align:center;
  position: relative;
}

/* coordinate og-fullimg img, and img wrapper */
.og-img-wrapper{
  /*position:relative;*/
  padding-bottom:81%;
  overflow: hidden;
  display:block;
}

.og-fullimg img {
  display: inline-block;
  max-height: 100%;
  max-width: 100%;
  position:absolute;
  top:-50%; bottom:-50%;
  left:-50%; right:-50%;
  margin:auto;
  width: auto;
  height: auto;
  vertical-align: middle;
}

.lightbox-img-link{
  /*position:relative;
  display:inline-block;*/
}

.og-details {
  padding: 0 1rem 0 2rem;
  width: 43%;
  float:left;
  margin:0;
  -webkit-transition: margin .3s ease-out;
  transition: margin .3s ease-out;
}

.og-details .tab-content {
  background: #1e1e1e;
  border-bottom: 1px solid #555;
  padding: 1rem;
}

.og-details .tab-pane {
  padding: 0 0 0 1rem;
  max-height: 450px;
  min-height:240px;
}

.row-offcanvas > section.content-section .og-details .tab-content:nth-of-type(1){
  padding-bottom: 0 !important
}

.og-details a{
  font-size: 1em;
  color: #d6d6d6;
  border: none;
  outline: none;
  margin: 0;
  padding:0;
}

.og-details a:hover{
  color: #f0f0f0;
  border:none;
}

.og-details a::before{
  margin:0;
}

.og-expanded > a::after{
  top: auto;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
  border-width: 10px;
  left: 50%;
  margin: -8px 0 0 -10px;
  border-bottom-color:#222;
}

/* gallery dropdown right metadata tabs */
.og-details .nav-tabs {
  border-bottom: 1px solid #555;
  margin-bottom:0;
}

.og-details .nav-tabs>li{
  margin-right: 0.2rem
}

.og-details .nav-tabs>li>a {
  border: 1px solid #555;
  border-color: #555 #555 #555 #555;
  border-width: 2px 1px 1px;
  border-radius:0;
  color: #999;
  background: #222;
  text-transform: uppercase;
  font-size: 1em;
  font-weight:bold;
  font-family: 'Helvetica Neue',helvetica,arial,sans-serif;
}

.og-details .nav-tabs>li>a:hover,
.og-details .nav-tabs>li>a:active {
  color: #eee;
  border-color: #909090 #555 #555 #555;
  border-width: 2px 1px 1px;
}
/*
.og-details .nav-tabs>li>a::before {
  content: '';
  display: none;
}
*/
.og-details .nav-tabs>li.active>a,  
.og-details .nav-tabs>li.active>a:hover,
.og-details .nav-tabs>li.active>a:active {
  color: #c0c0c0;
  background: #1e1e1e;
  border-width: 2px 1px 1px;
  border-color: #909090 #555 transparent #555;
}

.og-details .nav-tabs>li:first-of-type{
  margin-left: 0.75rem;
}
/* ... */

